# DTS-backend

./: .dockerignore  .env.example  .gitignore  DEPLOY_RAILWAY.md  Dockerfile  Makefile  README.md  entrypoint.sh  manage.py  pyproject.toml  railway.beat.toml  railway.toml  railway.worker.toml
core/: admin_media.py  apps.py  beat_schedule.py  celery.py  media_urls.py  media_views.py  openapi.py  storage.py  urls.py
core/api/: pagination.py  throttling.py
core/api/v1/: urls.py
core/settings/: apps_registry.py  base.py  database.py  redis_config.py  test.py
features/accounts/: apps.py  models.py
features/accounts/application/: __init__.py  dto.py
features/accounts/domain/: __init__.py  entities.py  exceptions.py  (+4 more)
features/analytics/: apps.py  models.py
features/delivery/: apps.py  models.py
features/marketing/: apps.py  models.py
features/notifications/: apps.py
features/orders/: apps.py
features/products/: apps.py
features/stores/: apps.py  models.py
portals/admin_portal/: apps.py
portals/merchant/: apps.py
scripts/: repair_migration_tables.py
templates/notifications/: merchant_verification_email.html  merchant_verification_email.txt  order_status_email.html  order_status_email.txt  password_reset_email.html  password_reset_email.txt
tests/: gis_helpers.py  test_admin_registry.py  test_api_version_prefix.py  test_apps.py  test_beat_schedule.py  test_celery_app.py  test_celery_eager.py  test_db.py  test_media_serving.py  test_media_urls.py  test_openapi_schema.py  test_pagination.py  test_settings.py  test_storage.py  test_throttle.py
(+245 files in other folders)
